Version 1.9.5
------------------------
Date:15-June-2022

Bug fix for user activity summary filter by date range


Version 1.9.4
------------------------
Date:13-June-2022

New menu:
Marketplace Banner

New env properties:
MARKETPLACE_BANNER_PATH=/home/docker/Software/assets/product-assets
MARKETPLACE_BANNER_BASEURL=https://symplified.it/store-assets


Version 1.9.3
------------------------
Date:9-June-2022

New menu:
Featured location
City Neighbour Region
Featured Category

##DB Changes:
ALTER TABLE location_config ADD created_at DATETIME;
ALTER TABLE location_config ADD updated_at DATETIME;


Version 1.9.2
------------------------
Date:7-June-2022

Bug fix for featured store & featured product


Version 1.9.1
------------------------
Date:2-June-2022
Add new function to manage Featured Store & Featured Product
##DB Changes:
ALTER TABLE product_feature_config ADD created_at DATETIME;
ALTER TABLE product_feature_config ADD updated_at DATETIME;
ALTER TABLE store_display_config ADD created_at DATETIME;
ALTER TABLE store_display_config ADD updated_at DATETIME;

Version 1.9.0
------------------------
Date:31-May-2022
Add new field : editReason to save reason during updating voucher
##DB Changes:
ALTER TABLE voucher ADD editReason VARCHAR(200);


Version 1.8.9
------------------------
Date:24-May-2022
Bug fix for promo-text
Disable edit for voucher redeemCount>0


Version 1.8.8
------------------------
Date:19-May-2022
Add new field for promo text : verticalCode
Change currency label to radio button for voucher


Version 1.8.7
------------------------
Date:12-May-2022
CRUD for promo text


Version 1.8.6
------------------------
Date:11-May-2022
Support multiple verticalCode for voucher


Version 1.8.5
------------------------
Date:10-May-2022
Add more field for voucher


Version 1.8.4
------------------------
Date:13-April-2022
Add terms and conditions in voucher


Version 1.8.3
------------------------
Date:11-April-2022
Bug fix for voucher delete function

