@@ -1,8 +1,9 @@
 Version 1.9.5
 ------------------------
-Date:15-June-2022
+Date:16-June-2022
 
 Bug fix for user activity summary filter by date range
+Bug fix for export to excel for user activity summary
 
 
 Version 1.9.4
